--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ button:hover {
 .game-container {
   border: 1px solid var(--compliment);
   border-radius: 10px;
-  padding: 0.25em;
+  padding: 0.5em;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -111,6 +111,7 @@ button:hover {
   overflow-x: hidden;
   overflow-y: scroll;
   scroll-behavior: smooth;
+  word-break: break-all;
 }
 
 .passage-text::-webkit-scrollbar {
